tests/data/libsvm/invalid/inconsistent_label_specification.libsvm
1 1:-1.11 2:-2.90
 1:-0.52 2:-0.33
0 1:11.21 2:3.14